test_dir/logs_backup/gcc/00.3/open_gcc_2016-12-01-17:06:29.txt
--------------------------------------------------------------------------------------------
seed: 15026
cc1: fatal error: /usr/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 15026
seed: 15026
seed: 15026
seed: 15026
cc1: fatal error: /usr/include/stdc-predef.h: Permission denied
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 32613
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 32613
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 32613
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 32613
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 24642
cc1: fatal error: /usr/local/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 24642
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 24642
cc1: fatal error: /usr/local/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 24642
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 4492
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/stdc-predef.h: Permission denied
compilation terminated.
seed: 4492
seed: 4492
seed: 4492
seed: 4492
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/stdc-predef.h: Permission denied
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 10456
cc1: fatal error: /usr/local/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 10456
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 10456
cc1: fatal error: /usr/local/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 10456
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 2892
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 2892
seed: 2892
seed: 2892
seed: 2892
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 20365
cc1: fatal error: /usr/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 20365
seed: 20365
seed: 20365
seed: 20365
cc1: fatal error: /usr/include/stdc-predef.h: Permission denied
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 16898
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 16898
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 16898
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 16898
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 7361
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 7361
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 7361
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 7361
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 23964
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 23964
seed: 23964
seed: 23964
seed: 23964
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 18017
In file included from blaster.c:16:0:
shared.h:1:24: fatal error: /usr/include/x86_64-linux-gnu/sys/socket.h: Permission denied
 #include <sys/socket.h>
                        ^
compilation terminated.
seed: 18017
seed: 18017
seed: 18017
seed: 18017
In file included from shared.c:11:0:
shared.h:1:24: fatal error: /usr/include/x86_64-linux-gnu/sys/socket.h: Permission denied
 #include <sys/socket.h>
                        ^
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 14871
In file included from blaster.c:16:0:
shared.h:1:24: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/sys/socket.h: Permission denied
 #include <sys/socket.h>
                        ^
compilation terminated.
seed: 14871
seed: 14871
seed: 14871
seed: 14871
In file included from shared.c:11:0:
shared.h:1:24: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/sys/socket.h: Permission denied
 #include <sys/socket.h>
                        ^
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 23030
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 23030
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 23030
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 23030
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 11792
cc1: fatal error: /usr/local/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 11792
seed: 11792
seed: 11792
seed: 11792
cc1: fatal error: /usr/local/include/stdc-predef.h: Permission denied
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 11506
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 11506
seed: 11506
seed: 11506
seed: 11506
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 29447
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 29447
seed: 29447
seed: 29447
seed: 29447
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 32557
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 32557
seed: 32557
seed: 32557
seed: 32557
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 25956
cc1: fatal error: /usr/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 25956
seed: 25956
seed: 25956
seed: 25956
cc1: fatal error: /usr/include/stdc-predef.h: Permission denied
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 12641
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 12641
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 12641
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 12641
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 31712
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 31712
seed: 31712
seed: 31712
seed: 31712
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
--------------------------------------------------------------------------------------------
